fixed the sidebar border overflow

--- a/src/css/docs.css
+++ b/src/css/docs.css
@@ -66,7 +66,6 @@
 
     .category-links a.active {
       font-weight: bold;
-      background-color: var( --pico-primary-hover-background);
     }
 
     .category-links li:active {
@@ -97,15 +96,16 @@
   @media (max-width: 960px) {
     .sidebar {
       position: fixed;
-      left: -100%;
+      left: -120%;
       top: 80px;
       width: 100%;
+      overflow-x: hidden;
       height: calc(100vh - 80px);
       margin-left: 1em;
       background-color: var(--pico-background-color);
       z-index: 1000;
       /* transition: left 0.3s ease; */
-      box-shadow: 2px 0 10px rgba(0, 0, 0, 0.1);
+      /* box-shadow: 2px 0 10px rgba(0, 0, 0, 0.1); */
     }
 
     .sidebar.open {
